--- a/gentlemen-terminal/catalogue.html
+++ b/gentlemen-terminal/catalogue.html
@@ -22,7 +22,7 @@
   </button>
 
   <div class="home-panel" id="homePanel" aria-hidden="true">
-    <a class="home-action" href="GENTLEMEN/index.html" data-sfx="click">
+    <a class="home-action" href="index.html" data-sfx="click">
       <span class="home-action-title">TERMINAL PRINCIPAL</span>
       <span class="home-action-sub">Retour à l’accueil</span>
     </a>
@@ -350,4 +350,5 @@
   <script src="catalogue.js"></script>
 </body>
 </html>
+
 
