--- a/gentlemen-terminal/index.html
+++ b/gentlemen-terminal/index.html
@@ -22,7 +22,7 @@
   </button>
 
   <div class="home-panel" id="homePanel" aria-hidden="true">
-    <a class="home-action" href="/index.html" data-sfx="click">
+    <a class="home-action" href="../index.html" data-sfx="click">
       <span class="home-action-title">TERMINAL PRINCIPAL</span>
       <span class="home-action-sub">Retour à l’accueil</span>
     </a>
@@ -566,3 +566,4 @@
   <script src="main.js"></script>
 </body>
 </html>
+
