--- a/lore/lore.html
+++ b/lore/lore.html
@@ -17,7 +17,7 @@
   </button>
 
   <div class="home-panel" id="homePanel" aria-hidden="true">
-    <a class="home-action" href="/index.html" data-sfx="click">
+    <a class="home-action" href="../index.html" data-sfx="click">
       <span class="home-action-title">TERMINAL PRINCIPAL</span>
       <span class="home-action-sub">Retour à l’accueil</span>
     </a>
@@ -253,3 +253,4 @@
   <script src="assets/js/lore.js"></script>
 </body>
 </html>
+
