--- a/map/index.html
+++ b/map/index.html
@@ -13,6 +13,20 @@
 </head>
 
 <body>
+  <!-- Floating Home Dock -->
+<div class="home-dock" id="homeDock">
+  <button class="home-tab" id="homeTab" type="button" aria-expanded="false" title="Ouvrir le dock">
+    <span class="home-tab-g">G</span>
+  </button>
+
+  <div class="home-panel" id="homePanel" aria-hidden="true">
+    <a class="home-action" href="../index.html" data-sfx="click">
+      <span class="home-action-title">TERMINAL PRINCIPAL</span>
+      <span class="home-action-sub">Retour à l’accueil</span>
+    </a>
+  </div>
+</div>
+  
   <!-- BOOT / AUDIO UNLOCK -->
   <div id="boot" class="boot" aria-modal="true" role="dialog">
     <div class="bootCard">
@@ -154,3 +168,4 @@
   <script src="./map.js"></script>
 </body>
 </html>
+
