--- a/gentlemen-terminal/index.html
+++ b/gentlemen-terminal/index.html
@@ -220,6 +220,7 @@
                 <li>la charge neurologique maximale supportable,</li>
                 <li>la compatibilité avec des protocoles extrêmes,</li>
                 <li>la faculté à dépasser les limites biologiques normales.</li>
+                <li>NB 🎯 : La Technique est une stat dérivée du Spécial, représentant la maîtrise acquise par l’entraînement, pouvant atteindre un niveau surnaturel.</li>
               </ul>
               <div class="hr"></div>
               <i>Le Spécial ne donne rien. Il autorise à payer le prix.</i>
@@ -566,4 +567,5 @@
   <script src="main.js"></script>
 </body>
 </html>
+
 
